WIP: adding db and generating it

--- a/MGL7760POC/Web/MGL7760POC.Web/appsettings.json
+++ b/MGL7760POC/Web/MGL7760POC.Web/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=impots_db;Trusted_Connection=True;ConnectRetryCount=0"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
