--- a/MGL7760POC/Implementation/Repositories/MGL7760POC.Implementation.Repositories/MGL7760POC.Implementation.Repositories.csproj
+++ b/MGL7760POC/Implementation/Repositories/MGL7760POC.Implementation.Repositories/MGL7760POC.Implementation.Repositories.csproj
@@ -1,7 +1,17 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.22" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.22" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.22" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Abstraction\Repositories\MGL7760POC.Abstraction.Repositories\MGL7760POC.Abstraction.Repositories.csproj" />
+  </ItemGroup>
 
 </Project>
