--- a/MGL7760POC/Web/MGL7760POC.Web/appsettings.json
+++ b/MGL7760POC/Web/MGL7760POC.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=impots_db;Trusted_Connection=True;ConnectRetryCount=0"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=MaBD;Trusted_Connection=True;ConnectRetryCount=0"
   },
   "Logging": {
     "LogLevel": {
